urls_downloaded_cb({"token": "Makefile.am", "urls": ["Porting-from-autotools.html#makefileam", "Porting-from-autotools.html#sub-directories", "Porting-from-autotools.html#cleanfiles-extra_dist-etc", "Porting-from-autotools.html#glibcompileresources", "Porting-from-autotools.html#headers", "Porting-from-autotools.html#libraries", "Porting-from-autotools.html#custom-targets", "Porting-from-autotools.html#global-cflags", "Porting-from-autotools.html#tests", "Porting-from-autotools.html#gobject-introspection", "Porting-from-autotools.html#gsettings", "Porting-from-autotools.html#gettext"]});