urls_downloaded_cb({"token": "configure.ac", "urls": ["Porting-from-autotools.html#configureac", "Porting-from-autotools.html#defining-variables", "Porting-from-autotools.html#page-description", "Porting-from-autotools.html#ac_subst", "Porting-from-autotools.html#auto-headers", "Porting-from-autotools.html#finding-programs", "Porting-from-autotools.html#finding-pkgconfig-modules", "Porting-from-autotools.html#arguments", "Porting-from-autotools.html#gsettings", "Porting-from-autotools.html#gettext"]});