urls_downloaded_cb({"token":"meson.options","urls":[{"url":"Build-options.html#build-options","node_type":"p","context":{"gi-language":["default"]}},{"url":"Configuring-a-build-directory.html#configuring-a-build-directory","node_type":"p","context":{"gi-language":["default"]}},{"url":"Fs-module.html#file-lookup-rules","node_type":"p","context":{"gi-language":["default"]}},{"url":"Porting-from-autotools.html#arguments","node_type":"p","context":{"gi-language":["default"]}},{"url":"Reference-manual_functions.html#arguments17","node_type":"table","context":{"gi-language":["default"]}},{"url":"Reference-manual_functions.html#arguments50","node_type":"table","context":{"gi-language":["default"]}},{"url":"Reference-manual_functions.html#subproject","node_type":"ul","context":{"gi-language":["default"]}},{"url":"Release-notes-for-1-1-0.html#support-for-reading-options-from-mesonoptions","node_type":"h2","context":{"gi-language":["default"]}}]});