urls_downloaded_cb({"token": "meson_options.txt", "urls": ["Porting-from-autotools.html#arguments", "Release-notes-for-0-45-0.html#integer-options", "Release-notes-for-0-44-0.html#page-description", "Configuring-a-build-directory.html#configuring-a-build-directory", "Release-notes-for-0-47-0.html#new-feature-option-type", "Build-options.html#build-options"]});