urls_downloaded_cb({"token": "meson_options.txt", "urls": [{"url": "Build-options.html#page-description", "context": {"gi-language": ["default"]}}, {"url": "Configuring-a-build-directory.html#page-description", "context": {"gi-language": ["default"]}}, {"url": "Release-notes-for-0-47-0.html#page-description", "context": {"gi-language": ["default"]}}, {"url": "Release-notes-for-0-44-0.html#page-description", "context": {"gi-language": ["default"]}}, {"url": "Release-notes-for-0-45-0.html#page-description", "context": {"gi-language": ["default"]}}, {"url": "Porting-from-autotools.html#page-description", "context": {"gi-language": ["default"]}}]});